test/expected/explain_0f_v-03.out
explain void f() = 0
             ^
14: error: non-virtual function can not be pure
